--- a/sass/_document.scss
+++ b/sass/_document.scss
@@ -4,65 +4,19 @@
 body {
 
   .container {
-    @include container;
-    @include clearfix;
-    background-color: #fbeecb;
-  }
 
-  .ag1 { @include span(1 of 10); }
-  .ag2 {
-    @include span(8 of 10);
-    @include clearfix;
-    background-color: #fae7b3;
-  }
-  .ag3 {
-    @include span(1 of 10 last);
-  }
-  .ag4, .ag5 {
-    @include span(3 of 6);
-  }
-  .ag5 {
-    @include last;
-  }
-  .ag6 {
-    @include span(2 of 6);
-  }
-  .ag7 {
-    @include span(4 of 6 last);
-    @include clearfix;
-  }
-  .ag8 {
-    @include span(2 of 4);
-  }
-  .ag9 {
-    @include span(2 of 4 last);
-  }
-  .ag10 {
-    clear: both;
-  }
-  .ag1, .ag3 {
-    background-color: #71dad2;
-  }
-
-  .ag4,.ag5,.ag8,.ag9 {
-    background-color: #ee9e9c;
-  }
-
-  .ag6 {
-    background-color: #f09671;
-  }
-
-  .ag7 {
-    background-color: #f6d784;
-  }
-
-  .ag10 {
-    background-color: #ea9fc3;
   }
 
   /**
    * Text Styles
    */
+  h1 {
+    text-align: center;
+    font-size: 1.5rem;
+    font-weight: normal;
+    padding-top: 1.8rem;
+    padding-bottom: 1.8rem;
+  }
   h2 {
     text-align: center;
     font-size: 1rem;
