--- a/stylesheets/site.css
+++ b/stylesheets/site.css
@@ -276,20 +276,13 @@ th {
 /**
  * Styles for AG grids & Container
  */
-/* line 4, ../sass/_document.scss */
-body {
-  /**
-   * Text Styles
-   */
-}
-/* line 6, ../sass/_document.scss */
+/* line 6, ../sass/_grid.scss */
 body .container {
   max-width: 100%;
   margin-left: auto;
   margin-right: auto;
   overflow: hidden;
   *zoom: 1;
-  background-color: #fbeecb;
 }
 /* line 12, ../../../../../Users/joseangelbonfilevia/.rvm/gems/ruby-2.1.4/gems/susy-2.1.3/sass/susy/output/support/_clearfix.scss */
 body .container:after {
@@ -297,89 +290,52 @@ body .container:after {
   display: block;
   clear: both;
 }
-/* line 12, ../sass/_document.scss */
+/* line 11, ../sass/_grid.scss */
 body .ag1 {
-  width: 8.16327%;
+  width: 100%;
+  float: left;
+  margin-left: 0;
+  margin-right: 0;
+}
+/* line 12, ../sass/_grid.scss */
+body .ag2 {
+  width: 59.18367%;
   float: left;
   margin-right: 2.04082%;
+  overflow: hidden;
+  *zoom: 1;
+  margin: 0 auto;
+}
+
+/*************
+ *  Mixin rules for the current site
+ ***/
+/* line 5, ../sass/_mixins.scss */
+.text-rule {
+  text-align: center;
+  font-weight: normal;
+  padding-top: 1.8rem;
+  padding-bottom: 1.8rem;
+}
+
+/**
+ * Styles for AG grids & Container
+ */
+/* line 4, ../sass/_document.scss */
+body {
+  /**
+   * Text Styles
+   */
 }
 /* line 13, ../sass/_document.scss */
-body .ag2 {
-  width: 79.59184%;
-  float: left;
-  margin-right: 2.04082%;
-  overflow: hidden;
-  *zoom: 1;
-  background-color: #fae7b3;
+body h1 {
+  text-align: center;
+  font-size: 1.5rem;
+  font-weight: normal;
+  padding-top: 1.8rem;
+  padding-bottom: 1.8rem;
 }
-/* line 18, ../sass/_document.scss */
-body .ag3 {
-  width: 8.16327%;
-  float: right;
-  margin-right: 0;
-}
-/* line 21, ../sass/_document.scss */
-body .ag4, body .ag5 {
-  width: 48.27586%;
-  float: left;
-  margin-right: 3.44828%;
-}
-/* line 24, ../sass/_document.scss */
-body .ag5 {
-  float: right;
-  margin-right: 0;
-}
-/* line 27, ../sass/_document.scss */
-body .ag6 {
-  width: 31.03448%;
-  float: left;
-  margin-right: 3.44828%;
-}
-/* line 30, ../sass/_document.scss */
-body .ag7 {
-  width: 65.51724%;
-  float: right;
-  margin-right: 0;
-  overflow: hidden;
-  *zoom: 1;
-}
-/* line 34, ../sass/_document.scss */
-body .ag8 {
-  width: 47.36842%;
-  float: left;
-  margin-right: 5.26316%;
-}
-/* line 37, ../sass/_document.scss */
-body .ag9 {
-  width: 47.36842%;
-  float: right;
-  margin-right: 0;
-}
-/* line 40, ../sass/_document.scss */
-body .ag10 {
-  clear: both;
-}
-/* line 43, ../sass/_document.scss */
-body .ag1, body .ag3 {
-  background-color: #71dad2;
-}
-/* line 47, ../sass/_document.scss */
-body .ag4, body .ag5, body .ag8, body .ag9 {
-  background-color: #ee9e9c;
-}
-/* line 51, ../sass/_document.scss */
-body .ag6 {
-  background-color: #f09671;
-}
-/* line 55, ../sass/_document.scss */
-body .ag7 {
-  background-color: #f6d784;
-}
-/* line 59, ../sass/_document.scss */
-body .ag10 {
-  background-color: #ea9fc3;
-}
-/* line 66, ../sass/_document.scss */
+/* line 20, ../sass/_document.scss */
 body h2 {
   text-align: center;
   font-size: 1rem;
